# named_queue

./: CMakeLists.txt
common/: message.h
receiver/: CMakeLists.txt  receiver.cpp
sender/: CMakeLists.txt  sender.cpp
